--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -1,29 +1,78 @@
+html, body, h1, h2, h3, h4, h5, h6, hr, li, ul, p, a, img, button {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: "Pingfang SC-Regular", "Open Sans", "Lantinghei SC", "Microsoft Yahei Light", "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  list-style: none; }
+
+* {
+  position: relative; }
 
 .normal {
-  font-family: Georgia, sans-serif;
-  margin-top: 3em;
-  text-align: center;
-}
+  width: 66.67%; }
 
-.title {
-  font-size: 2.5rem;
-  font-weight: normal;
-  letter-spacing: -1px;
-}
+.baseBody {
+  background: linear-gradient(rgba(255, 255, 255, 0.87), rgba(201, 255, 246, 0.5), rgba(194, 187, 239, 0.5));
+  width: 100%;
+  height: 100%; }
 
-.welcome {
-  height: 328px;
-  background: url(../assets/yay.jpg) no-repeat center 0;
-  background-size: 388px 328px;
-}
+.navBar {
+  height: auto;
+  width: 66.67%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 12px; }
 
-.list {
-  font-size: 1.2em;
-  margin-top: 1.8em;
-  list-style: none;
-  line-height: 1.5em;
-}
+.loginDiv {
+  width: 100%;
+  height: auto;
+  display: inline-block; }
 
-.list code {
-  background: #f7f7f7;
-}
+#loginButton {
+  font-size: 18px;
+  background: none;
+  color: #3D5673;
+  outline: none;
+  cursor: pointer;
+  float: right; }
+
+.navDiv {
+  width: 100%;
+  display: inline-block; }
+
+.leftDiv {
+  margin-top: 35px;
+  display: inline-block; }
+
+.imgDiv {
+  display: inline-block; }
+
+.labelDiv {
+  display: inline-block; }
+
+.rightDiv {
+  float: right;
+  margin-top: 39px;
+  display: inline-block; }
+
+.iconImage {
+  width: 78px;
+  height: 50px;
+  vertical-align: middle; }
+
+.logoLabel {
+  color: #3D5673;
+  font-size: 24px;
+  margin-left: 10px;
+  width: auto;
+  display: inline-block; }
+
+.navButton {
+  color: #3D5673;
+  font-size: 24px;
+  background: none;
+  outline: none;
+  cursor: pointer;
+  margin-left: 30px; }
+
+/*# sourceMappingURL=IndexPage.css.map */
