<fix>: <fix the bug: components' name must be uppercase / add the page footer>

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -7,6 +7,10 @@ html, body, h1, h2, h3, h4, h5, h6, hr, li, ul, p, a, img, button {
   list-style: none;
 }
 
+html {
+  height: 100%;
+}
+
 * {
   position: relative;
   //background: $gradient;
