--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -5,6 +5,9 @@ html, body, h1, h2, h3, h4, h5, h6, hr, li, ul, p, a, img, button {
   font-family: "Pingfang SC-Regular", "Open Sans", "Lantinghei SC", "Microsoft Yahei Light", "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   list-style: none; }
 
+html {
+  height: 100%; }
+
 * {
   position: relative; }
 
@@ -14,7 +17,7 @@ html, body, h1, h2, h3, h4, h5, h6, hr, li, ul, p, a, img, button {
 .baseBody {
   background: linear-gradient(rgba(255, 255, 255, 0.87), rgba(201, 255, 246, 0.5), rgba(194, 187, 239, 0.5));
   width: 100%;
-  height: 100%; }
+  min-height: 100%; }
 
 .navBar {
   height: auto;
