<feat>: <add the navigator / fix the layout / modify the background color>

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,5 +4,7 @@ $gradient: linear-gradient(rgba(255,255,255,0.87), rgba(201,255,246,0.5), rgba(1
 $base-font-family: "Pingfang SC-Regular", "Open Sans", "Lantinghei SC", "Microsoft Yahei Light", "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 $base-font-weight: 300;
 $base-font-size: 18px;
-$navFontColor: #3D5673;
-$pageFootColor: #474457;
+$nav-font-color: #3D5673;
+$page-foot-color: #474457;
+$card-background: rgba(255,255,255,0.95);
+$background-color: #F9FAFB;
