--- a/src/components/AccountInfo.css
+++ b/src/components/AccountInfo.css
@@ -11,10 +11,18 @@ html {
 * {
   position: relative; }
 
+.normal {
+  width: 960px;
+  margin-left: auto;
+  margin-right: auto; }
+
 .baseBody {
   background: #F9FAFB;
   width: 100%;
-  min-height: 100%;
-  height: 100%; }
+  min-height: 100%; }
 
-/*# sourceMappingURL=IndexPage.css.map */
+.mainDiv {
+  width: 100%;
+  margin-top: 21px; }
+
+/*# sourceMappingURL=AccountInfo.css.map */
