--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -11,10 +11,10 @@ html {
 * {
   position: relative; }
 
-.baseBody {
-  background: #F9FAFB;
+.contentBodyDiv {
   width: 100%;
-  min-height: 100%;
-  height: 100%; }
+  height: 385px;
+  background-color: rgba(255, 255, 255, 0.95);
+  display: inline-block; }
 
-/*# sourceMappingURL=IndexPage.css.map */
+/*# sourceMappingURL=Content.css.map */
