--- a/src/components/PageFoot.scss
+++ b/src/components/PageFoot.scss
@@ -2,7 +2,7 @@
 @import "../assets/scss/base";
 
 .footDiv {
-  background-color: $pageFootColor;
+  background-color: $page-foot-color;
   height: 94px;
   width: 100%;
   text-align: center;
