--- a/src/routes/IndexPage.scss
+++ b/src/routes/IndexPage.scss
@@ -1,84 +1,9 @@
 @import "../assets/scss/variables";
 @import "../assets/scss/base";
 
-.normal {
-  //background: $gradient;
-  width: 66.67%;
-}
-
 .baseBody {
-  background: $gradient;
+  background: $background-color;
   width: 100%;
   min-height: 100%;
-}
-
-.navBar {
-  height: auto;
-  width: 66.67%;
-  //text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 12px;
-}
-
-.loginDiv {
-  width: 100%;
-  height: auto;
-  display: inline-block;
-}
-
-#loginButton {
-  font-size: 18px;
-  background: none;
-  color: $navFontColor;
-  outline: none;
-  cursor: pointer;
-  float: right;
-}
-
-.navDiv {
-  width: 100%;
-  display: inline-block;
-}
-
-.leftDiv {
-  margin-top: 35px;
-  display: inline-block;
-}
-
-.imgDiv {
-  display: inline-block;
-}
-
-.labelDiv {
-  display: inline-block;
-}
-
-.rightDiv {
-  float: right;
-  margin-top: 39px;
-  display: inline-block;
-}
-
-.iconImage {
-  width: 78px;
-  height: 50px;
-  vertical-align: middle;
-}
-
-.logoLabel {
-  color: $navFontColor;
-  font-size: 24px;
-  margin-left: 10px;
-  width: auto;
-  display: inline-block;
-}
-
-.navButton {
-  color: $navFontColor;
-  font-size: 24px;
-  background: none;
-  outline: none;
-  cursor: pointer;
-  margin-left: 30px;
+  height: 100%;
 }
