--- a/src/components/AccountInfo.css
+++ b/src/components/AccountInfo.css
@@ -9,7 +9,8 @@ html {
   height: 100%; }
 
 * {
-  position: relative; }
+  position: relative;
+  box-sizing: border-box; }
 
 .normal {
   width: 960px;
@@ -22,7 +23,6 @@ html {
   min-height: 100%; }
 
 .mainDiv {
-  width: 100%;
-  margin-top: 21px; }
+  width: 100%; }
 
 /*# sourceMappingURL=AccountInfo.css.map */
