--- a/src/components/Navigator.css
+++ b/src/components/Navigator.css
@@ -9,7 +9,8 @@ html {
   height: 100%; }
 
 * {
-  position: relative; }
+  position: relative;
+  box-sizing: border-box; }
 
 .navBar {
   height: auto;
