--- a/src/components/PageFoot.css
+++ b/src/components/PageFoot.css
@@ -9,7 +9,8 @@ html {
   height: 100%; }
 
 * {
-  position: relative; }
+  position: relative;
+  box-sizing: border-box; }
 
 .footDiv {
   background-color: #474457;
