--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -9,7 +9,8 @@ html {
   height: 100%; }
 
 * {
-  position: relative; }
+  position: relative;
+  box-sizing: border-box; }
 
 .baseBody {
   background: #F9FAFB;
