<fix>: <modify the navigator>

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,6 +5,7 @@ $base-font-family: "Pingfang SC-Regular", "Open Sans", "Lantinghei SC", "Microso
 $base-font-weight: 300;
 $base-font-size: 18px;
 $nav-font-color: #3D5673;
+$nav-font-color-hover: #8DC6FF;
 $page-foot-color: #474457;
 $card-background: rgba(255,255,255,0.95);
 $background-color: #F9FAFB;
