--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -25,4 +25,4 @@ html {
   font-size: 12px;
   margin-top: 40px; }
 
-/*# sourceMappingURL=PageFoot.css.map */
+/*# sourceMappingURL=Footer.css.map */
