--- a/src/routes/AccountPage.scss
+++ b/src/routes/AccountPage.scss
@@ -1,9 +1,9 @@
 @import "../assets/scss/variables";
 @import "../assets/scss/base";
 
-.baseBody {
-  background: $background-color;
-  width: 100%;
-  min-height: 100%;
-  height: 100%;
-}
+//.baseBody {
+//  background: $background-color;
+//  width: 100%;
+//  min-height: 100%;
+//  height: 100%;
+//}
