--- a/src/components/Layout/Breadcrumb.scss
+++ b/src/components/Layout/Breadcrumb.scss
@@ -1,5 +1,5 @@
-@import "../assets/scss/variables";
-@import "../assets/scss/base";
+@import "../../assets/scss/variables";
+@import "../../assets/scss/base";
 
 .breadcrumbBody {
   width: 100%;
