--- a/src/components/Layout/Navigator.scss
+++ b/src/components/Layout/Navigator.scss
@@ -1,9 +1,9 @@
-@import "../assets/scss/variables";
-@import "../assets/scss/base";
-@import "../assets/scss/mixin";
+@import "../../assets/scss/variables";
+@import "../../assets/scss/base";
+@import "../../assets/scss/mixin";
 
 .navBar {
-  height: auto;
+  height: 100px;
   width: 100%;
   //text-align: center;
   padding-top: 16px;
