--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,27 @@
+html, body, h1, h2, h3, h4, h5, h6, hr, li, ul, p, a, img, button {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: "Pingfang SC-Regular", "Open Sans", "Lantinghei SC", "Microsoft Yahei Light", "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  list-style: none; }
 
-html, body, :global(#root) {
-  height: 100%;
-}
+html {
+  height: 100%; }
 
+* {
+  position: relative;
+  box-sizing: border-box; }
+
+/*
+ * grid
+ */
+html :global .baseBody {
+  background: #F9FAFB;
+  width: 100%;
+  min-height: 100%;
+  height: 100%; }
+html :global .container {
+  width: 960px;
+  margin: 0 auto; }
+
+/*# sourceMappingURL=index.css.map */
