<dev>:<add fund info>

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -3,7 +3,7 @@ html, body, h1, h2, h3, h4, h5, h6, hr, li, ul, p, a, img, button {
   padding: 0;
   border: 0;
   font-family: $base-font-family;
-  //font-weight: $base-font-weight;
+  font-weight: $base-font-weight;
   list-style: none;
 }
 
