--- a/src/components/Auth/AccountInfo.scss
+++ b/src/components/Auth/AccountInfo.scss
@@ -11,7 +11,7 @@
 }
 
 .contentName {
-  color: $nav-font-color;
+  color: $main-font-color;
   font-size: 16px;
   letter-spacing: 1.6px;
   line-height: 22px;
@@ -33,7 +33,7 @@
   height: 17px;
   font-size: 10px;
   letter-spacing: 1px;
-  color: $nav-font-color;
+  color: $main-font-color;
   background: rgba(194, 194, 194, 0.95) none;
   opacity: 0.48;
   cursor: pointer;
@@ -60,5 +60,5 @@
   height: 25px;
   margin-left: 12px;
   //border: none;
-  border-bottom: 4px $nav-font-color;
+  border-bottom: 4px $main-font-color;
 }
