--- a/src/components/Layout/Navigator.css
+++ b/src/components/Layout/Navigator.css
@@ -2,7 +2,8 @@ html, body, h1, h2, h3, h4, h5, h6, hr, li, ul, p, a, img, button {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: "Pingfang SC-Regular", "Open Sans", "Lantinghei SC", "Microsoft Yahei Light", "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "Pingfang SC", "Open Sans", "Lantinghei SC", "Microsoft Yahei Light", "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
   list-style: none; }
 
 html {
@@ -89,7 +90,7 @@ html {
   .menuDiv :global .ant-menu-item.ant-menu-item-active {
     border-bottom: none; }
     .menuDiv :global .ant-menu-item.ant-menu-item-active a {
-      color: #8DC6FF; }
+      color: #81B6F5; }
   .menuDiv :global .ant-menu-item.ant-menu-item-selected {
     border-bottom: none; }
 
