--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 $white-color: #fff;
 $grey-light: #f6f6f6;
 $gradient: linear-gradient(rgba(255,255,255,0.87), rgba(201,255,246,0.5), rgba(194,187,239,0.5));
-$base-font-family: "Pingfang SC-Regular", "Open Sans", "Lantinghei SC", "Microsoft Yahei Light", "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$base-font-family: "Pingfang SC", "Open Sans", "Lantinghei SC", "Microsoft Yahei Light", "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 $base-font-weight: 300;
 $base-font-size: 18px;
 $nav-font-color: #3D5673;
