--- a/src/components/FundList/FundListTable.css
+++ b/src/components/FundList/FundListTable.css
@@ -12,4 +12,7 @@ html {
   position: relative;
   box-sizing: border-box; }
 
-/*# sourceMappingURL=IndexPage.css.map */
+.tableDiv {
+  padding-bottom: 50px; }
+
+/*# sourceMappingURL=FundListTable.css.map */
