--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html, body, h1, h2, h3, h4, h5, h6, hr, li, ul, p, a, img, button {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: "Pingfang SC-Regular", "Open Sans", "Lantinghei SC", "Microsoft Yahei Light", "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "Pingfang SC", "Open Sans", "Lantinghei SC", "Microsoft Yahei Light", "Microsoft Yahei", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   list-style: none; }
 
 html {
@@ -23,5 +23,8 @@ html :global .baseBody {
 html :global .container {
   width: 960px;
   margin: 0 auto; }
+@media (max-width: 960px) {
+  html :global .container {
+    width: 100%; } }
 
 /*# sourceMappingURL=index.css.map */
