--- a/src/index.scss
+++ b/src/index.scss
@@ -16,5 +16,10 @@ html {
       margin:  0 auto;
     }
 
+    @media (max-width:960px) {
+      .container {
+        width: 100%;
+      }
+    }
   }
 }
