<dev>:<add the breadcrumb part>

--- a/src/components/FundList/FundListHeader.scss
+++ b/src/components/FundList/FundListHeader.scss
@@ -15,8 +15,9 @@
 }
 
 .listHeader {
-  color: $nav-font-color;
+  color: $main-font-color;
   font-size: 36px;
+  font-weight: 400;
 }
 
 .listNumSpan {
