--- a/src/components/Auth/AccountInfo.scss
+++ b/src/components/Auth/AccountInfo.scss
@@ -4,7 +4,7 @@
 .contentBodyDiv {
   width: 100%;
   height: 385px;
-  margin-top: 43px;
+  //margin-top: 43px;
   padding: 28px;
   background-color: $card-background;
   display: inline-block;
