--- a/src/components/Layout/Breadcrumb.css
+++ b/src/components/Layout/Breadcrumb.css
@@ -16,7 +16,8 @@ html {
 .breadcrumbBody {
   width: 100%;
   height: auto;
-  margin-top: 42px; }
+  margin-top: 42px;
+  margin-bottom: 42px; }
 
 .breadcrumb {
   font-size: 12px;
