--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,9 @@ html :global .baseBody {
 html :global .container {
   width: 960px;
   margin: 0 auto; }
+html :global .card {
+  background-color: rgba(255, 255, 255, 0.95);
+  padding: 10px 30px; }
 @media (max-width: 960px) {
   html :global .container {
     width: 100%; } }
