--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,10 @@ html {
       margin:  0 auto;
     }
 
+    .card {
+      background-color: $card-background;
+      padding: 10px 30px;
+    }
     @media (max-width:960px) {
       .container {
         width: 100%;
