<dev>:<put the breadcrumb and the search input area together (in FundManagerHeader)>

--- a/src/components/FundList/FundSearchInput.css
+++ b/src/components/FundList/FundSearchInput.css
@@ -16,31 +16,13 @@ html {
 /*
  * grid
  */
-.headerDiv {
-  margin-top: 52px;
-  margin-bottom: 48px; }
-  .headerDiv:after {
-    content: '';
-    display: block;
-    clear: both; }
-
-.leftDiv {
+.searchDiv {
   display: inline-block;
-  float: left; }
+  vertical-align: bottom;
+  float: right;
+  padding-top: 20px; }
 
-.listHeader {
-  color: #3D5673;
-  font-size: 36px;
-  font-weight: 400; }
+.searchInput {
+  margin-left: 150px; }
 
-.listNumSpan {
-  font-size: 14px;
-  color: #9FAEC0;
-  margin-left: 20px; }
-
-.listSortSpan {
-  font-size: 14px;
-  color: #9FAEC0;
-  margin-left: 50px; }
-
-/*# sourceMappingURL=FundListHeader.css.map */
+/*# sourceMappingURL=FundSearchInput.css.map */
