--- a/src/components/Layout/Breadcrumb.css
+++ b/src/components/Layout/Breadcrumb.css
@@ -14,10 +14,9 @@ html {
   box-sizing: border-box; }
 
 .breadcrumbBody {
-  width: 100%;
   height: auto;
-  margin-top: 42px;
-  margin-bottom: 42px; }
+  padding-top: 20px;
+  display: inline-block; }
 
 .breadcrumb {
   font-size: 12px;
