<dev>:<add part of the fund manager page / add the divHeader component>

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,3 +14,4 @@ $blue-grey-color: #9FAEC0;
 
 $card-background: rgba(255, 255, 255, 0.95);
 $background-color: #F9FAFB;
+$button-background: #8DC6FF;
