--- a/src/routes/FundManagerPage.css
+++ b/src/routes/FundManagerPage.css
@@ -13,15 +13,10 @@ html {
   position: relative;
   box-sizing: border-box; }
 
-/*
- * grid
- */
-.leftDiv {
-  display: inline-block;
-  float: left; }
-  .leftDiv:after {
-    content: '';
-    display: block;
-    clear: both; }
+.navDiv {
+  margin-top: 43px; }
 
-/*# sourceMappingURL=FundManagerHeader.css.map */
+.infoDiv {
+  margin-top: 15px; }
+
+/*# sourceMappingURL=FundManagerPage.css.map */
