--- a/src/components/FundManager/FundManagerInfo.css
+++ b/src/components/FundManager/FundManagerInfo.css
@@ -104,4 +104,88 @@ html {
   font-size: 14px;
   color: #3D5673; }
 
+.fundHistoryDiv {
+  height: auto;
+  margin-top: 15px;
+  background-color: rgba(255, 255, 255, 0.95);
+  padding: 20px; }
+
+.fundPerformance {
+  height: 300px;
+  margin-top: 15px; }
+
+.performanceLeft {
+  width: 621px;
+  height: 300px;
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.95);
+  vertical-align: top;
+  margin-right: 18px; }
+
+.performanceRight {
+  width: 319px;
+  height: 300px;
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.95);
+  vertical-align: top; }
+
+.fundYieldTrend {
+  height: 313px;
+  margin-top: 15px;
+  background-color: rgba(255, 255, 255, 0.95); }
+
+.previousFundManagerDiv {
+  height: 263px;
+  margin-top: 15px;
+  background-color: rgba(255, 255, 255, 0.95);
+  padding: 20px; }
+
+.managerPerformanceDiv {
+  height: 313px;
+  margin-top: 15px; }
+
+.previousPerformance {
+  width: 473px;
+  height: 300px;
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.95);
+  vertical-align: top;
+  margin-right: 14px;
+  padding: 20px; }
+
+.integratedPerformance {
+  width: 473px;
+  height: 300px;
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.95);
+  vertical-align: top;
+  padding: 20px; }
+
+.networkChart {
+  height: 500px;
+  margin-top: 15px;
+  background-color: rgba(255, 255, 255, 0.95);
+  padding: 20px; }
+
+.container :global .card {
+  margin-bottom: 15px;
+  width: 100%; }
+.container :global .ant-tabs {
+  box-sizing: border-box;
+  position: relative;
+  overflow: hidden;
+  zoom: 1;
+  width: 100%;
+  color: rgba(0, 0, 0, 0.65); }
+
+.section {
+  display: inline-block;
+  width: 50%;
+  font-size: 0; }
+  .section .sectionTitle {
+    margin-bottom: 10px;
+    color: #9FAEC0;
+    font-size: 12px;
+    font-weight: 200; }
+
 /*# sourceMappingURL=FundManagerInfo.css.map */
