--- a/src/components/Auth/AccountInfo.css
+++ b/src/components/Auth/AccountInfo.css
@@ -15,7 +15,8 @@ html {
 
 .contentBodyDiv {
   width: 100%;
-  height: 385px;
+  height: auto;
+  margin-top: 20px;
   padding: 28px;
   background-color: rgba(255, 255, 255, 0.95);
   display: inline-block; }
@@ -51,7 +52,7 @@ html {
   display: inline-block;
   margin-top: 20px;
   margin-left: 60px;
-  width: auto;
+  width: 450px;
   height: auto;
   vertical-align: top; }
 
@@ -64,5 +65,28 @@ html {
   height: 25px;
   margin-left: 12px;
   border-bottom: 4px #3D5673; }
+
+.anticon-close-circle {
+  cursor: pointer;
+  color: #ccc;
+  transition: color 0.3s;
+  font-size: 12px; }
+
+.anticon-close-circle:hover {
+  color: #999; }
+
+.anticon-close-circle:active {
+  color: #666; }
+
+.myInput {
+  margin-bottom: 20px; }
+
+.verificationCode {
+  width: 200px;
+  margin-bottom: 20px; }
+
+.accountButton {
+  margin-right: 40px;
+  width: 100px; }
 
 /*# sourceMappingURL=AccountInfo.css.map */
