--- a/src/components/Auth/AccountInfo.scss
+++ b/src/components/Auth/AccountInfo.scss
@@ -3,8 +3,8 @@
 
 .contentBodyDiv {
   width: 100%;
-  height: 385px;
-  //margin-top: 43px;
+  height: auto;
+  margin-top: 20px;
   padding: 28px;
   background-color: $card-background;
   display: inline-block;
@@ -45,7 +45,7 @@
   display: inline-block;
   margin-top: 20px;
   margin-left: 60px;
-  width: auto;
+  width: 450px;
   height: auto;
   vertical-align: top;
 }
@@ -61,4 +61,32 @@
   margin-left: 12px;
   //border: none;
   border-bottom: 4px $main-font-color;
+}
+
+.anticon-close-circle {
+  cursor: pointer;
+  color: #ccc;
+  transition: color 0.3s;
+  font-size: 12px;
+}
+.anticon-close-circle:hover {
+  color: #999;
+}
+.anticon-close-circle:active {
+  color: #666;
+}
+
+.myInput {
+  margin-bottom: 20px;
+}
+
+.verificationCode {
+  width: 200px;
+  margin-bottom: 20px;
+}
+
+.accountButton {
+  margin-right: 40px;
+  width: 100px;
+  //height: 32px;
 }
