--- a/src/components/Util/DivHeader.scss
+++ b/src/components/Util/DivHeader.scss
@@ -3,6 +3,7 @@
 
 .divHeader {
   font-size: 16px;
+  font-weight: 400;
   color: $main-font-color;
   border-left: solid 2px $button-background;
   padding-left: 10px;
