<dev>:<update style>

--- a/src/components/Util/DivHeader.scss
+++ b/src/components/Util/DivHeader.scss
@@ -2,6 +2,7 @@
 @import "../../assets/scss/base";
 
 .divHeader {
+  margin-bottom: 20px;
   font-size: 16px;
   font-weight: 400 ;
   color: $main-font-color;
