--- a/src/components/FundManager/FundManagerInfo.scss
+++ b/src/components/FundManager/FundManagerInfo.scss
@@ -101,7 +101,7 @@
 }
 
 .managerIntro {
-  padding-top: 20px;
+  //padding-top: 20px;
   padding-left: 12px;
   font-size: 14px;
   color: $main-font-color;
