--- a/src/components/Util/DivHeader.css
+++ b/src/components/Util/DivHeader.css
@@ -14,6 +14,7 @@ html {
   box-sizing: border-box; }
 
 .divHeader {
+  margin-bottom: 20px;
   font-size: 16px;
   font-weight: 400;
   color: #3D5673;
