--- a/src/components/Layout/Navigator.scss
+++ b/src/components/Layout/Navigator.scss
@@ -50,7 +50,7 @@
   background: none;
   height: 50px;
   border-bottom: none;
-  font-size: 20px;
+  font-size: 16px;
   color: $main-font-color;
 }
 
@@ -75,7 +75,7 @@
 
 .navButton {
   color: $main-font-color;
-  font-size: 20px;
+  //font-size: 20px;
   background: none;
   outline: none;
   cursor: pointer;
