<feat>:<add attribution bar chart>

--- a/src/components/FundAnalysis/FundAnalysisCharts.scss
+++ b/src/components/FundAnalysis/FundAnalysisCharts.scss
@@ -24,3 +24,16 @@
     font-size: 36px;
   }
 }
+
+.section {
+  display: inline-block;
+  width: 50%;
+  padding: 0 20px;
+  font-size: 0;
+  .section_title {
+    margin-bottom: 10px;
+    color: $blue-grey-color;
+    font-size: 12px;
+    font-weight: 200;
+  }
+}
