--- a/src/components/FundAnalysis/FundAnalysisCharts.css
+++ b/src/components/FundAnalysis/FundAnalysisCharts.css
@@ -26,4 +26,15 @@ html {
   margin-left: 25px;
   font-size: 36px; }
 
+.section {
+  display: inline-block;
+  width: 50%;
+  padding: 0 20px;
+  font-size: 0; }
+  .section .section_title {
+    margin-bottom: 10px;
+    color: #9FAEC0;
+    font-size: 12px;
+    font-weight: 200; }
+
 /*# sourceMappingURL=FundAnalysisCharts.css.map */
