--- a/src/components/Util/BreadcrumbSearch.css
+++ b/src/components/Util/BreadcrumbSearch.css
@@ -13,6 +13,9 @@ html {
   position: relative;
   box-sizing: border-box; }
 
+button {
+  outline: none; }
+
 /*
  * grid
  */
@@ -24,4 +27,4 @@ html {
     display: block;
     clear: both; }
 
-/*# sourceMappingURL=FundHeader.css.map */
+/*# sourceMappingURL=BreadcrumbSearch.css.map */
