--- a/src/components/Auth/AccountInfo.css
+++ b/src/components/Auth/AccountInfo.css
@@ -13,6 +13,9 @@ html {
   position: relative;
   box-sizing: border-box; }
 
+button {
+  outline: none; }
+
 .contentBodyDiv {
   width: 100%;
   height: auto;
