--- a/src/components/FundCompany/CompanyBrief.scss
+++ b/src/components/FundCompany/CompanyBrief.scss
@@ -4,15 +4,15 @@
 .title {
   h1 {
     display: inline-block;
-    color: $title-black-color;
+    color: $main-font-color;
     font-weight: 500;
-    font-size: 48px;
+    font-size: 24px;
   }
-  margin-top: 40px;
+  //margin-top: 40px;
 }
 
 .card {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .section_a {
