--- a/src/components/FundInfo/FundCharts.css
+++ b/src/components/FundInfo/FundCharts.css
@@ -13,6 +13,9 @@ html {
   position: relative;
   box-sizing: border-box; }
 
+button {
+  outline: none; }
+
 .container :global .card {
   margin-bottom: 15px; }
 
