--- a/src/components/FundManager/ManagerCharts.css
+++ b/src/components/FundManager/ManagerCharts.css
@@ -13,6 +13,9 @@ html {
   position: relative;
   box-sizing: border-box; }
 
+button {
+  outline: none; }
+
 .fundPerformance {
   height: auto;
   margin-top: 15px; }
