--- a/src/components/Layout/Breadcrumb.css
+++ b/src/components/Layout/Breadcrumb.css
@@ -13,6 +13,9 @@ html {
   position: relative;
   box-sizing: border-box; }
 
+button {
+  outline: none; }
+
 .breadcrumbBody {
   height: auto;
   padding-top: 20px;
