--- a/src/components/Layout/Footer.css
+++ b/src/components/Layout/Footer.css
@@ -13,6 +13,9 @@ html {
   position: relative;
   box-sizing: border-box; }
 
+button {
+  outline: none; }
+
 .footDiv {
   background-color: #474457;
   width: 100%;
