--- a/src/components/Util/DivHeader.css
+++ b/src/components/Util/DivHeader.css
@@ -13,6 +13,9 @@ html {
   position: relative;
   box-sizing: border-box; }
 
+button {
+  outline: none; }
+
 .divHeader {
   margin-bottom: 20px;
   font-size: 16px;
