--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -13,4 +13,7 @@ html {
   position: relative;
   box-sizing: border-box; }
 
+button {
+  outline: none; }
+
 /*# sourceMappingURL=IndexPage.css.map */
