--- a/src/components/FundList/FundListHeader.scss
+++ b/src/components/FundList/FundListHeader.scss
@@ -31,3 +31,17 @@
   color: #9FAEC0;
   margin-left: 50px;
 }
+
+.select {
+  width: 120px;
+  :global {
+    .ant-select-selection {
+      border: none;
+      background: none;
+      color: $sub-font-color;
+      font-size: 14px;
+      outline: none;
+    }
+  }
+}
+
