<feat>:<complete fund list data>

--- a/src/components/FundList/FundListHeader.scss
+++ b/src/components/FundList/FundListHeader.scss
@@ -3,8 +3,8 @@
 @import "../../assets/scss/mixin";
 
 .headerDiv {
-  margin-top: 52px;
-  margin-bottom: 48px;
+  //margin-top: 52px;
+  margin-bottom: 50px;
   //height: 80px;
   @include clear-fix();
 }
