--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -11,6 +11,7 @@ $main-font-color: #3D5673;
 $sub-font-color: #81B6F5;
 $page-foot-color: #474457;
 $blue-grey-color: #9FAEC0;
+$card-border-color: #979797;
 
 $card-background: rgba(255, 255, 255, 0.95);
 $background-color: #F9FAFB;
