<dev>:<connect the fund part data(pie chart need to be optimized)>

--- a/src/components/FundInfo/FundCharts.css
+++ b/src/components/FundInfo/FundCharts.css
@@ -29,4 +29,7 @@ button {
     font-size: 12px;
     font-weight: 200; }
 
+.pie_chart {
+  text-align: center; }
+
 /*# sourceMappingURL=FundCharts.css.map */
